# graphed-orchestrator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.graphed/: state.json
.graphed/M0/: attempts.md
.graphed/ORCH/: attempts.md
docs/: api.rst  conf.py  design.rst  improvements.rst  index.rst
scripts/: advance.py  confirm_ci.py  watch_ci.py
src/graphed_orchestrator/: __init__.py  ci.py  gates.py  integrity.py  metrics.py  model.py  orchestrator.py  precommit.py  signals.py  store.py  watch.py
tests/extra/: test_precommit_gate.py  test_watch.py
tests/frozen/m10/: test_pass_body_stub.py
tests/frozen/orch/: fakers.py  test_ci_gate.py  test_fakers.py  test_gates.py  test_integrity.py  test_signals.py  test_state_machine.py  test_store.py
