[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphed-orchestrator"
version = "0.0.1"
description = "Deterministic gated-pipeline orchestrator (state machine, gates, escalation) for graphed"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "graphed-org" }]
keywords = ["graphed", "orchestrator", "ci", "state-machine"]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "coverage[toml]", "hypothesis", "mypy", "ruff", "pyyaml", "prek"]
docs = ["sphinx", "furo"]

[project.urls]
Homepage = "https://github.com/graphed-org/graphed-orchestrator"

[tool.hatch.build.targets.wheel]
packages = ["src/graphed_orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests/frozen/orch"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["graphed_orchestrator"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 110
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF", "PLC0415"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["yaml.*"]
ignore_missing_imports = true

[tool.graphed_precommit]
# the shape scanner's own source + the tests that test it contain the banned shapes by design
integrity_exclude = [
  "src/graphed_orchestrator/precommit.py",
  "src/graphed_orchestrator/integrity.py",
  "tests/extra/test_precommit_gate.py",
  "tests/frozen",
]
